--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
     "**/platforms"
   ],
     "BasicSettings": {
-        "Publisher": "File",
+        "Publisher": "Console",
         "MyPassword": "Password123"
     },
     "EmailSettings": {
