--- a/appsettings.json
+++ b/appsettings.json
@@ -18,7 +18,7 @@
             "Host": "smtp.example.com",
             "Port": 587,
             "Username": "",
-            "Password": "",
+            "Password": ""
         }
     },
     "FileSettings": {
